fixed unaligned look

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -85,14 +85,13 @@ body{
 
 .sidebar {  
 	width: 20%;
-	height: 100%;
  	border: 1px solid #333; 
  	background-color: #333;
 
 }
 
 .window {
-	width: 80%;
+	width:80%;
 	border: 1px solid #333;
 	padding: 10px; 
 	background-color: #eee;
